<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".loadingActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="391dp"
        android:layout_height="448dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/earth_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/earth" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="215dp"
        android:layout_height="31dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="87dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/the_future_is_loading"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/loading_logo"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/loading_logo"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/android_home"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="72dp"
        android:layout_height="67dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/loading_gif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/loading2" />

</androidx.constraintlayout.widget.ConstraintLayout>