<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/reg_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="143dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/android_home"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_logo2" />

    <TextView
        android:id="@+id/reg_logo2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/register"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_logo" />

    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/Password_Hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/reg_pass2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email"
        android:autofillHints="" />

    <EditText
        android:id="@+id/reg_pass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/Password_Hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/reg_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_pass" />

    <Button
        android:id="@+id/reg_submit"
        android:layout_width="156dp"
        android:layout_height="45dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/sign_up"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/reg_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_pass2" />

    <Button
        android:id="@+id/reg_back"
        android:layout_width="159dp"
        android:layout_height="51dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="104dp"
        android:background="@color/colorAccent"
        android:text="@string/reg_back_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_submit" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/Email_Hint"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/reg_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_logo2"
        tools:text="@string/reg_email"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>