<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/setup_toolbar"
        android:layout_width="386dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/avatar_icon"
        android:layout_width="165dp"
        android:layout_height="157dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="160dp"
        android:background="@android:drawable/sym_def_app_icon"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_name" />

    <EditText
        android:id="@+id/options_name"
        android:layout_width="280dp"
        android:layout_height="52dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/optios_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/avatar_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_toolbar"
        tools:text="@string/options_name" />

    <Button
        android:id="@+id/btn_submit_options"
        android:layout_width="156dp"
        android:layout_height="45dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="152dp"
        android:background="@android:color/background_dark"
        android:text="@string/btn_options_submit"
        android:textColor="#FCFCFC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_icon"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/submit_options" />

    <ProgressBar
        android:id="@+id/options_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="411dp"
        android:layout_height="25dp"
        android:layout_marginBottom="7dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/options_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>