<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a111111111"
    tools:context=".heatingActivity">

    <Button
        android:id="@+id/motor_ctrl0"
        android:layout_width="110dp"
        android:layout_height="56dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="18dp"
        android:background="#000000"
        android:text="@string/motor_ctrl_string1"
        android:textColor="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/motor_ctrl2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/motor_ctrl3"
        android:layout_width="110dp"
        android:layout_height="56dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/motor_control_string4"
        android:textColor="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/motor_ctrl2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/motor_ctrl2"
        android:layout_width="110dp"
        android:layout_height="56dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="220dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/motor_control_string3"
        android:textColor="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="105dp"
        android:layout_height="86dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="272dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/motor_ctrl0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/back2_foreground" />

    <Button
        android:id="@+id/motor_ctrl1"
        android:layout_width="110dp"
        android:layout_height="56dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="18dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/motor_ctrl_string2"
        android:textColor="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/motor_ctrl3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/motor_ctrl0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/customAngle"
        android:layout_width="331dp"
        android:layout_height="16dp"
        android:layout_marginTop="7dp"
        android:max="180"

        android:progressDrawable="@color/avatar_icon_image_background"
        android:thumbTint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/motor_ctrl1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customMotorText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/customMotorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customMotorString"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/motor_ctrl0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

</androidx.constraintlayout.widget.ConstraintLayout>