<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_full_open_on_phone"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="337dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="205dp"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="206dp"
        android:layout_marginBottom="549dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/light_btn"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="224dp"
        android:background="#000000"
        android:text="@string/light_1_string"
        android:textColor="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/light_btn1"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/light_2_string"
        android:textColor="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toEndOf="@+id/light_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/light_btn2"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/light_3_string"
        android:textColor="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/light_btn"
        app:layout_constraintVertical_bias="0.275" />

    <Button
        android:id="@+id/light_btn3"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/light_4_string"
        android:textColor="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/light_btn1"
        app:layout_constraintVertical_bias="0.281" />

    <Button
        android:id="@+id/light_off"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="224dp"
        android:background="@color/colorAccent"
        android:text="@string/light_1_string"
        android:textColor="@color/avatar_icon_image_background"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/light_off1"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorAccent"
        android:text="@string/light_2_string"
        android:textColor="@color/avatar_icon_image_background"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toEndOf="@+id/light_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/light_off2"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:background="@color/colorAccent"
        android:text="@string/light_3_string"
        android:textColor="@color/avatar_icon_image_background"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/light_btn3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/light_btn"
        app:layout_constraintVertical_bias="0.281" />

    <Button
        android:id="@+id/light_off3"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorAccent"
        android:text="@string/light_4_string"
        android:textColor="@color/avatar_icon_image_background"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/light_btn1"
        app:layout_constraintVertical_bias="0.275" />

    <Button
        android:id="@+id/settings1_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="156dp"
        android:background="@color/colorPrimary"
        android:text="@string/settings1_string"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/light_off2" />

</androidx.constraintlayout.widget.ConstraintLayout>

